<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TreasureMap</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="set_gps">GPS 가 꺼져 있습니다. GPS 설정 창으로 이동합니다.</string>
    <string name="no_gps">위치 신호가 잡히지 않는 곳입니다.</string>
    <string name="confirm">확인</string>
    <string name="notice_on">알림 ON</string>
    <string name="notice_off">알림 OFF</string>
    <string name="user_id">사용할 아이디</string>
    <string name="user_email">E-mail</string>
    <string name="user_birth">생년</string>
    <string name="user_reg">등록</string>
    <string name="user_pass">비밀번호</string>
    <string name="user_pass_confirm">비밀번호 확인</string>
    <string name="userid">아이디</string>
    <string name="user_login">로그인</string>
	<string name="user_wrong">아이디나 비밀번호가 일치하지 않습니다.</string>
	<string name="auto_login">자동로그인</string>
	<string name="membership">회원가입</string>
	<string name="search">검색</string>
		
</resources>